@@ -4,8 +4,10 @@ Revision history for Bread-Board
   [ API CHANGES ]
 
   [ BUG FIXES ]
-     - fixed Bread::Board::Dumper to dump parameterized containers -
-       previously it would just ignore them entirely (#56, Dave Rolsky)
+    - fixed Bread::Board::Dumper to dump parameterized containers -
+      previously it would just ignore them entirely (#56, Dave Rolsky)
+    - Using Bread::Board no longer enables strict and warnings in the calling
+      package. (#53, Dave Rolsky)
 
   [ DOCUMENTATION ]
 
